--- a/css/styles.scss
+++ b/css/styles.scss
@@ -41,7 +41,7 @@ h1 {
   color: white;
 }
 
-.card-deck {
+.cards {
   margin-top: 2rem;
 }
 
